--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Authors@R: c(person("Thomas J.", "Leeper", role = c("aut"),
              person("Bao", "Nguyen", role = "ctb"),
              person("Thierry", "Onkelinx", role = "ctb"),
              person("Andrii", "Degtiarov", role = "ctb"))
+Maintainer: Thomas J. Leeper <thosjleeper@gmail.com>
 Description: A simple client package for the Amazon Web Services ('AWS') Simple
     Storage Service ('S3') 'REST' 'API' <https://aws.amazon.com/s3/>.
 License: GPL (>= 2)
